# Mexico-air-pollution

./: .flake8  .pylintrc  pyproject.toml
app/: import.py  mongo.py
