[tool.poetry]
authors = [
    "Ana Obradovic <obradovic.ra.17@uns.ac.rs>",
]

description = "Module representing tool for analysis of MongoDB aggregation queries."
name = "mongo_analysis"
packages = [
    { include = "app" }
]
version = "0.1.0"
[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.16.1"
ipdb = "^0.13.11"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^2.0.2"
pymongo = "^4.3.3"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

